--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "keywords": [],
   "devDependencies": {
+    "@hatsprotocol/sdk-v1-core": "^0.8.0",
     "@rollup/plugin-json": "^6.0.1",
     "@types/jest": "^29.5.10",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
