--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "tslib": "^2.6.2",
     "typescript": "^5.3.2",
     "viem": "^1.11.0"
+  },
+  "dependencies": {
+    "zod": "^3.22.4"
   }
 }
