--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hatsprotocol/hsg-sdk",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "author": "Haberdasher Labs",
   "license": "MIT",
   "main": "dist/hsg-sdk.cjs.js",
@@ -36,5 +36,8 @@
   },
   "dependencies": {
     "zod": "^3.22.4"
+  },
+  "peerDependencies": {
+    "viem": "^1.11.0"
   }
 }
